--- a/public/css/app.css
+++ b/public/css/app.css
@@ -29554,3 +29554,14 @@ readers do not read off random characters that represent icons */
   margin: 0;
 }
 
+.card-title {
+  margin: 0;
+}
+
+.modal_error {
+  padding: 0;
+  margin: 0;
+  text-align: center;
+  font-size: 0.9em;
+}
+
