Agregando modal para laboratorios.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -29565,3 +29565,15 @@ readers do not read off random characters that represent icons */
   font-size: 0.9em;
 }
 
+.label-with-modal {
+  display: flex;
+}
+
+.label-with-modal > * {
+  display: block;
+}
+
+.ultramodal {
+  z-index: 99999999999;
+}
+
