busqueda productos ajax

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -17,6 +17,8 @@ $fa-font-path: "../webfonts";
 @import "~@fortawesome/fontawesome-free/scss/solid";
 @import "~@fortawesome/fontawesome-free/scss/brands";
 
+@import "~select2/dist/css/select2.min.css";
+
 .navbar-laravel {
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
