--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -64,3 +64,9 @@ $fa-font-path: "../webfonts";
 .ultramodal {
     z-index: 99999999999;
 }
+.sidebar, .brand-link {
+    background: #b23030;
+}
+.sidebar-dark-primary .nav-sidebar > .nav-item > .nav-link.active {
+    background: gray;
+}
