--- a/public/css/app.css
+++ b/public/css/app.css
@@ -29580,7 +29580,7 @@ readers do not read off random characters that represent icons */
 
 .sidebar,
 .brand-link {
-  background: #b23030;
+  background: #B23737;
 }
 
 .sidebar-dark-primary .nav-sidebar > .nav-item > .nav-link.active {
