--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -65,7 +65,7 @@ $fa-font-path: "../webfonts";
     z-index: 99999999999;
 }
 .sidebar, .brand-link {
-    background: #b23030;
+    background: #B23737;
 }
 .sidebar-dark-primary .nav-sidebar > .nav-item > .nav-link.active {
     background: gray;
